<resources>
    <string name="app_name">CandleBox</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hoursLabel">hours</string>
    <string name="CO2Label">grams</string>
    <string name="treesLabel">trees</string>
    <string name="treesTitle">To put this into context, it would take a mature tree…</string>
    <string name="treesTitleEnd">to offset your CO2 emission</string>
    <string name="hoursTitle">You have logged…</string>
    <string name="hoursTitleEnd">of candle-burning</string>
    <string name="co2Title">You have emitted…</string>
    <string name="co2TitleEnd">of CO2 by burning candles</string>
    <string name="enterHours">Enter hours of candle-burning below:</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="signIn">sign in</string>
    <string name="signUp">sign up</string>
    <string name="thanksMessage">Thanks for adding a candle to our database!</string>
    <string name="uhOh">Uh-oh! Looks like your candle doesn\'t exist in our database yet. Would you mind filling it out for us below?</string>
    <string name="unknownCandle">Unknown Candle</string>
    <string name="allAboutYourCandle">All About Your Candle!</string>
</resources>