<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7D1F3"
    tools:context=".CandleStuff.Login.LoginActivity">


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvLoginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#8BFFFFFF"
        android:drawableStart="@drawable/blueuser"
        android:drawablePadding="5dp"
        android:fontFamily="@font/avenir"
        android:hint="@string/username"
        android:padding="7dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:background="#8BFFFFFF"
        android:drawableStart="@drawable/bluepw"
        android:drawablePadding="5dp"
        android:fontFamily="@font/avenir"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:background="#8BFFFFFF"
        android:fontFamily="@font/avenir"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/signIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="212dp"
        android:background="#8BFFFFFF"
        android:fontFamily="@font/avenir"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/signUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir"
        android:text="log in to candlebox"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvForgotPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/avenir"
        android:text="forgot password?"
        android:textColor="#000000"
        android:textSize="16sp" />

</RelativeLayout>