<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/circle"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@+id/tvTreesTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:src="@drawable/blue_circle_outline" />

    <TextView
        android:id="@+id/tvTesterFrag3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-220dp"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textStyle="bold"
        tools:text="17" />

    <TextView
        android:id="@+id/tvTreesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTesterFrag3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-40dp"
        android:fontFamily="@font/avenir"
        android:text="@string/hoursLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/tvTreesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGreeting3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/avenir"
        android:text="@string/treesTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvTreesEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/avenir"
        android:text="@string/treesTitleEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGreeting3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="Good morning, Alisha" />
</RelativeLayout>